cleanup after #485